--- a/main.css
+++ b/main.css
@@ -1,16 +1,30 @@
 body{
     padding-top: 35px;
-    font-family: 'Open Sans';
+    font-family: 'Open Sans', sans-serif;
     color:white;
     background-color:black;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Lato', sans-serif;
+}
+
+img {
+  height: auto;
+  max-width: 100%;
+}
+
 .jumbotron {
-  margin-bottom: 0px;
+  margin-bottom: 0;
   color: white;
   text-shadow: black 0.3em 0.3em 0.3em;
-  background: url('images/banner.png') no-repeat center center !important;
+  position: relative;
+  background: url('images/banner.png') no-repeat center center;
+  width: 100%;
+  height: 100%;
   background-size: cover;
+  overflow: hidden;
+  text-align: center;
 }
 
 .jumbotron h1{
@@ -25,6 +39,11 @@ body{
     font-size: 2em;
 }
 
+.col-md-4 i{
+    display:block;
+    text-align:center
+}
+
 #page_footer{
   padding:10px;
   text-align:center;
@@ -36,3 +55,63 @@ body{
     font-size: 6.5em;
 }
 
+#about_me {
+  margin-top: 100px;
+  margin-bottom: 80px;
+}
+
+#about_me i {
+  color: #00b3fe;
+  font-size: 60px;
+  padding: 15px;
+}
+
+#bg_about_me {
+  padding:3em;
+  background-image: linear-gradient(180deg, #0d0d0d, #262626, #1a1a1a);
+}
+
+#subheadings {
+  font-family: 'Gill Sans Nova Light';
+  font-weight: lighter;
+  font-size: 80px;
+}
+
+@-webkit-keyframes fadeIn {
+ 0% {
+ opacity: 0;
+}
+ 100% {
+ opacity:1;
+}
+}
+@-moz-keyframes fadeIn {
+ 0% {
+ opacity: 0;
+}
+ 100% {
+ opacity:1;
+}
+}
+@-o-keyframes fadeIn {
+ 0% {
+ opacity: 0;
+}
+ 100% {
+ opacity:1;
+}
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  -moz-animation-name: fadeIn;
+  -o-animation-name: fadeIn;
+  animation-name: fadeIn;
+}
