--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ img {
 .jumbotron {
   margin-bottom: 0;
   color: white;
-  text-shadow: black 0.3em 0.3em 0.3em;
+  text-shadow: #000000 0.1em 0.1em 0.1em;
   position: relative;
   background: url('../images/banner.png') no-repeat center center;
   width: 100%;
@@ -40,6 +40,16 @@ img {
     font-size: 2em;
 }
 
+.skills{
+  list-style: none;
+  text-align: center;
+}
+.skills li{
+  font-size:30px;
+  display:inline-block;
+  padding:5px 5px;
+}
+
 .col-md-4 i{
     display:block;
     text-align:center;
@@ -53,12 +63,18 @@ img {
   margin-bottom:3em;
 }
 
+
+/* Portfolio-Project section */
+
 .project{
-  padding:20px;
+  padding:10px;
   margin:0px;
-  background:linear-gradient(130deg, #cc0000, #300000, #a30000);
+  background:linear-gradient(110deg, #000000, #1a1a1a, #000000);
   border:2px solid #dddddd;
-  /*linear-gradient(180deg, #b3b3b3, #ffffff, #999999)*/
+  overflow:hidden;
+
+  /*linear-gradient(130deg, #cc0000, #300000, #a30000)
+    linear-gradient(180deg, #b3b3b3, #ffffff, #999999)*/
 }
 
 .project img{
@@ -91,7 +107,7 @@ img {
 }
 
 .projectDesc{
-  padding:20px;
+  padding:10px;
   width:100%;
   height:100%;
   position:absolute;
@@ -99,10 +115,12 @@ img {
   top:0;
   left:0;
 
-  background-color: rgba(0,0,0,0.8);
+  background: linear-gradient(110deg, #000000, #1a1a1a, #000000);
   opacity: 0;
   transition: 500ms;
   -webkit-transition: 500ms;
+  -o-transition: 500ms;
+  -ms-transition: 500ms;
 }
 
 .projectDesc h3{
@@ -110,10 +128,16 @@ img {
   text-align: center;
   opacity: 0;
   background: transparent;
+
   transform: rotate(180deg) skew(100deg, 100deg);
   -webkit-transform: rotate(180deg) skew(100deg, 100deg);
+  -o-transform: rotate(180deg) skew(100deg, 100deg);
+  -ms-transform: rotate(180deg) skew(100deg, 100deg);
+
   transition: 500ms;
   -webkit-transition: 500ms;
+  -o-transition: 500ms;
+  -ms-transition: 500ms;
 }
 
 .projectDesc p{
@@ -123,8 +147,13 @@ img {
   opacity: 0;
   transform: rotate(180deg) skew(100deg, 100deg);
   -webkit-transform: rotate(180deg) skew(100deg, 100deg);
+  -o-transform: rotate(180deg) skew(100deg, 100deg);
+  -ms-transform: rotate(180deg) skew(100deg, 100deg);
+
   transition: 500ms;
   -webkit-transition: 500ms;
+  -o-transition: 500ms;
+  -ms-transition: 500ms;
 }
 
 .projectDesc i{
@@ -136,45 +165,67 @@ img {
   opacity: 0;
   transform: translateY(100px);
   -webkit-transform: translateY(100px);
+  -o-transform: translateY(100px);
+  -ms-transition: translateY(100px);
+
   transition: 500ms;
   -webkit-transition: 500ms;
+  -o-transition: 500ms;
+  -ms-transition: 500ms;
 }
 
 .project:hover .projectDesc{
   opacity: 1;
   transition-delay: 0s;
   -webkit-transition-delay: 0s;
-  transform: translateX(0px);
-  -webkit-transform: translateX(100px);
+  -o-transition-delay: 0s;
+  -ms-transition-delay: 0s;
 }
 
 .project:hover img{
   transition-delay: 0s;
   -webkit-transition-delay: 0s;
+  -o-transition-delay: 0s;
+  -ms-transition-delay: 0s;
 }
 
 .project:hover h3{
   opacity: 1;
   transform: scale(1);
   -webkit-transform: scale(1);
+  -o-transform: scale(1);
+  -ms-transform: scale(1);
+
   transition-delay: 0.1s;
   -webkit-transition-delay: 0.1s;
+  -o-transition-delay: 0.1s;
+  -ms-transition-delay: 0.1s;
 }
 
 .project:hover p{
   opacity: 1;
   transform: scale(1);
   -webkit-transform: scale(1);
+  -o-transform: scale(1);
+  -ms-transform: scale(1);
+
   transition-delay: 0.2s;
   -webkit-transition-delay: 0.2s;
+  -o-transition-delay: 0.2s;
+  -ms-transition-delay: 0.2s;
 }
 
 .project:hover i{
   opacity: 1;
   transform: translateY(0px);
   -webkit-transform: translateY(0px);
+  -o-transform: translateY(0px);
+  -ms-transform: translateY(0px);
+
   transition-delay: 0.3s;
   -webkit-transition-delay: 0.3s;
+  -o-transition-delay: 0.3s;
+  -ms-transition-delay: 0.3s;
 }
 
 #page_footer{
@@ -183,7 +234,7 @@ img {
 }
 
 #title_heading{
-    font-family: 'Raleway';
+    font-family: 'Lato', sans-serif;
     font-weight: normal;
     font-size: 6.5em;
 }
@@ -214,16 +265,7 @@ img {
   border-bottom: 2px solid #dddddd;
 }
 
-#bg_uni_projects {
-  padding:3em;
-  background: linear-gradient(180deg, #e6e6e6, #ffffff);
-  margin-top: 0px;
-  margin-bottom: 0px;
-  border-bottom: 2px solid #dddddd;
-  color:black;
-}
-
-#bg_personal_projects {
+#bg_projects {
   padding:3em;
   background: linear-gradient(180deg, #e6e6e6, #ffffff);
   margin-top: 0px;
