--- a/css/main.css
+++ b/css/main.css
@@ -41,13 +41,13 @@ img {
 }
 
 .skills{
-  list-style: none;
   text-align: center;
 }
-.skills li{
+.skills span{
   font-size:30px;
   display:inline-block;
-  padding:5px 5px;
+  margin:5px;
+  padding:15px 15px;
 }
 
 .col-md-4 i{
@@ -129,31 +129,30 @@ img {
   opacity: 0;
   background: transparent;
 
-  transform: rotate(180deg) skew(100deg, 100deg);
-  -webkit-transform: rotate(180deg) skew(100deg, 100deg);
-  -o-transform: rotate(180deg) skew(100deg, 100deg);
-  -ms-transform: rotate(180deg) skew(100deg, 100deg);
+  transform: translateX(300px);
+  -webkit-transform: translateX(300px);
+  -o-transform: translateX(300px);
+  -ms-transition: translateX(300px);
 
-  transition: 500ms;
-  -webkit-transition: 500ms;
-  -o-transition: 500ms;
-  -ms-transition: 500ms;
+  transition: 300ms;
+  -webkit-transition: 300ms;
+  -o-transition: 300ms;
+  -ms-transition: 300ms;
 }
 
 .projectDesc p{
   position: relative;
   text-align: center;
-
   opacity: 0;
-  transform: rotate(180deg) skew(100deg, 100deg);
-  -webkit-transform: rotate(180deg) skew(100deg, 100deg);
-  -o-transform: rotate(180deg) skew(100deg, 100deg);
-  -ms-transform: rotate(180deg) skew(100deg, 100deg);
+  transform: translateX(-300px);
+  -webkit-transform: translateX(-300px);
+  -o-transform: translateX(-300px);
+  -ms-transition: translateX(-300px);
 
-  transition: 500ms;
-  -webkit-transition: 500ms;
-  -o-transition: 500ms;
-  -ms-transition: 500ms;
+  transition: 300ms;
+  -webkit-transition: 300ms;
+  -o-transition: 300ms;
+  -ms-transition: 300ms;
 }
 
 .projectDesc i{
@@ -163,23 +162,19 @@ img {
   font-size:30px;
 
   opacity: 0;
-  transform: translateY(100px);
-  -webkit-transform: translateY(100px);
-  -o-transform: translateY(100px);
-  -ms-transition: translateY(100px);
+  transform: translateX(300px);
+  -webkit-transform: translateX(300px);
+  -o-transform: translateX(300px);
+  -ms-transition: translateX(300px);
 
-  transition: 500ms;
-  -webkit-transition: 500ms;
-  -o-transition: 500ms;
-  -ms-transition: 500ms;
+  transition: 300ms;
+  -webkit-transition: 300ms;
+  -o-transition: 300ms;
+  -ms-transition: 300ms;
 }
 
 .project:hover .projectDesc{
   opacity: 1;
-  transition-delay: 0s;
-  -webkit-transition-delay: 0s;
-  -o-transition-delay: 0s;
-  -ms-transition-delay: 0s;
 }
 
 .project:hover img{
@@ -191,41 +186,41 @@ img {
 
 .project:hover h3{
   opacity: 1;
-  transform: scale(1);
-  -webkit-transform: scale(1);
-  -o-transform: scale(1);
-  -ms-transform: scale(1);
+  transform: translateX(0px);
+  -webkit-transform: translateX(0px);
+  -o-transform: translateX(0px);
+  -ms-transform: translateX(0px);
 
-  transition-delay: 0.1s;
-  -webkit-transition-delay: 0.1s;
-  -o-transition-delay: 0.1s;
-  -ms-transition-delay: 0.1s;
+  transition: 500ms;
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
+  -ms-transition: 500ms;
 }
 
 .project:hover p{
   opacity: 1;
-  transform: scale(1);
-  -webkit-transform: scale(1);
-  -o-transform: scale(1);
-  -ms-transform: scale(1);
+  transform: translateX(0px);
+  -webkit-transform: translateX(0px);
+  -o-transform: translateX(0px);
+  -ms-transform: translateX(0px);
 
-  transition-delay: 0.2s;
-  -webkit-transition-delay: 0.2s;
-  -o-transition-delay: 0.2s;
-  -ms-transition-delay: 0.2s;
+  transition: 500ms;
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
+  -ms-transition: 500ms;
 }
 
 .project:hover i{
   opacity: 1;
-  transform: translateY(0px);
-  -webkit-transform: translateY(0px);
-  -o-transform: translateY(0px);
-  -ms-transform: translateY(0px);
+  transform: translateX(0px);
+  -webkit-transform: translateX(0px);
+  -o-transform: translateX(0px);
+  -ms-transform: translateX(0px);
 
-  transition-delay: 0.3s;
-  -webkit-transition-delay: 0.3s;
-  -o-transition-delay: 0.3s;
-  -ms-transition-delay: 0.3s;
+  transition: 500ms;
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
+  -ms-transition: 500ms;
 }
 
 #page_footer{
@@ -255,8 +250,14 @@ img {
 #about_me p{
   margin-left: 15px;
   margin-right: 15px;
+  font-size:16px;
 }
 
+#about_me h3{
+  font-family: 'Raleway', sans-serif;
+  font-size:40px;
+  font-weight: bold;
+}
 #bg_about_me {
   padding:3em;
   background: linear-gradient(180deg, #0d0d0d, #262626, #1a1a1a);
@@ -283,8 +284,9 @@ img {
   color:white;
 }
 
-#bg_contact p {
-  font-size:20px;
+#bg_contact i {
+  font-size:100px;
+  padding-right:50px;
 }
 
 #subheadings {
