--- a/css/main.css
+++ b/css/main.css
@@ -15,29 +15,42 @@ img {
 }
 
 .jumbotron {
-  margin-bottom: 0;
-  color: white;
-  text-shadow: #000000 0.1em 0.1em 0.1em;
-  position: relative;
-  background: url('../images/banner.png') no-repeat center center;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  overflow: hidden;
+  min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+  min-height: 100vh; /* These two lines are counted as one :-)       */
+
+  display: flex;
+  align-items: center;
   text-align: center;
+
+  color: #fff;
+  /*background-color: #C92A2A;*/
+  background-color: #912121;
+
+  /*SOURCE: uigradients.com*/
+  background: #2F7336; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #2F7336 , #AA3A38); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #2F7336 , #AA3A38); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  overflow: hidden;
+  margin-bottom: 0;
+}
+
+.jumbotron img{
+    margin: 0 auto;
 }
 
 .jumbotron h1{
-    font-family: 'Syncopate';
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: bold;
     font-size: 6.5em;
-    margin-top: 0px;
+    margin: 0.3em auto;
 }
 
 .jumbotron h2{
     font-family: 'Raleway';
     font-weight: lighter;
     font-size: 2em;
+    margin: auto;
 }
 
 .skills{
@@ -108,7 +121,7 @@ img {
 }
 
 .projectName{
-  font-family:"Syncopate";
+  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
   padding-bottom:10px;
 }
 
@@ -237,7 +250,7 @@ img {
 .icon{
   font-size: 100px;
   margin: 7px;
-  color: #595959;
+  color: #fff;
   -webkit-transition: color 0.2s ease;
   -o-transition: color 0.2s ease;
   -ms-transition: color 0.2s ease;
@@ -273,12 +286,6 @@ img {
   text-align:center;
 }
 
-#title_heading{
-    font-family: 'Lato', sans-serif;
-    font-weight: normal;
-    font-size: 6.5em;
-}
-
 #about_me {
   width:100%;
   margin-top: 0px;
@@ -296,6 +303,15 @@ img {
   margin-left: 15px;
   margin-right: 15px;
   font-size:16px;
+}
+
+#about_me_list{
+  list-style-type: none;
+}
+
+#about_me_list h3{
+  font-family: 'Raleway', sans-serif;
+  font-weight: lighter;
 }
 
 #about_me h3{
@@ -327,30 +343,28 @@ img {
 }
 
 #bg_contact {
-/*
   padding:3em;
-  background-image: linear-gradient(180deg, #660000, #990000, #330000);
+
+  /*SOURCE: uigradients.com;*/
+  background: #232526; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #232526 , #414345); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #232526 , #414345); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   margin-top: 0px;
   margin-bottom: 0px;
   color:white;
-*/
+/*
   padding:3em;
   background-image: linear-gradient(180deg, #e6e6e6, #ffffff);
   margin-top: 0px;
   margin-bottom: 0px;
   color:black;
-}
-
-#bg_cv {
-  padding:3em;
-  background-image: linear-gradient(180deg, #0d0d0d, #262626, #1a1a1a);
-  margin-top: 0px;
-  margin-bottom: 0px;
-  border-bottom: 2px solid #dddddd;
+  */
 }
 
 #subheadings {
   font-family: 'Raleway';
   font-weight: lighter;
   font-size: 80px;
+  text-align: center;
 }
