--- a/src/assets/styles/ScrollDownButton.module.scss
+++ b/src/assets/styles/ScrollDownButton.module.scss
@@ -2,8 +2,11 @@
 
 .scrollDownButton {
   position: relative;
-  width: 100%;
-  height: 100%;
+}
+@media (max-width: 992px) {
+  .scrollDownButton {
+    visibility: hidden;
+  }
 }
 .scrollDownButton a span {
   position: absolute;
