--- a/src/assets/styles/ContactForm.module.scss
+++ b/src/assets/styles/ContactForm.module.scss
@@ -14,14 +14,7 @@
 
 .contactDiv {
   width: 100%;
-  margin-top: 40px;
   padding: 3rem;
-}
-
-.contactDiv h3 {
-  font-family: "Poppins", sans-serif;
-  font-size: 24px;
-  font-weight: 600;
 }
 
 .contactDiv p {
@@ -43,4 +36,10 @@
   font-weight: 600;
   padding: 8px 20px;
   border-radius: 4px;
+}
+
+@media (max-width: 992px) {
+  .contactDiv {
+    padding: 1rem;
+  }
 }
