--- a/src/assets/styles/Hero.scss
+++ b/src/assets/styles/Hero.scss
@@ -2,11 +2,10 @@
 
 #hero {
   width: 100%;
-  height: 100vh;
+  height: auto;
   position: relative;
   background: url("../img/hero-bg.jpg") top center;
   background-size: cover;
-  position: relative;
 }
 #hero:before {
   content: "";
@@ -43,6 +42,7 @@
   margin-top: 100px;
 }
 #hero .icon-box {
+  width: 100%;
   padding: 50px 30px;
   position: relative;
   text-align: center;
@@ -85,29 +85,24 @@
     background-attachment: fixed;
   }
 }
-@media (max-height: 800px) {
-  #hero {
-    height: auto;
-  }
-}
 @media (max-width: 992px) {
-  #hero {
-    height: auto;
-  }
   #hero h1 {
-    font-size: 42px;
+    font-size: 52px;
     line-height: 36px;
   }
   #hero h2 {
     font-size: 18px;
-    line-height: 24px;
+    line-height: 28px;
+  }
+  #hero .icon-boxes {
+    margin-top: 50px;
   }
 }
 @media (max-width: 480px) {
   #hero h1 {
-    font-size: 32px;
+    font-size: 38px;
   }
   #hero h2 {
-    font-size: 14px;
+    font-size: 16px;
   }
 }
