--- a/src/assets/styles/SkillSingle.module.scss
+++ b/src/assets/styles/SkillSingle.module.scss
@@ -5,6 +5,12 @@
   font-family: "Poppins", sans-serif;
 }
 
+@media (max-width: 992px) {
+  .skill {
+    font-size: 1rem;
+  }
+}
+
 .skill:not(:last-child) {
   margin-right: 1.5rem !important;
 }
