--- a/src/assets/styles/Style.scss
+++ b/src/assets/styles/Style.scss
@@ -166,6 +166,15 @@ h3.heading {
   margin-bottom: 1rem !important;
 }
 
+@media (max-width: 992px) {
+  h3.heading {
+    font-size: 18px;
+  }
+  .underLine {
+    width: 4rem;
+  }
+}
+
 .divider {
   width: 30px;
   border-bottom: 1px solid #fff;
