--- a/src/assets/styles/ShowcaseCard.module.scss
+++ b/src/assets/styles/ShowcaseCard.module.scss
@@ -3,11 +3,23 @@
 .showcaseCard {
   position: relative;
   border: none !important;
-  box-shadow: 0 13px 8px -10px rgba(0, 0, 0, 0.1);
+  border-radius: 14px;
+  // box-shadow: 0 10px 8px -5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
   margin-bottom: 2rem;
+  // background-color: #f5f5f5 !important;
+  background-clip: padding-box;
+  transition: ease;
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.showcaseCard:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.1);
 }
 
 .showcaseCard .imgWrapper {
+  border-top-left-radius: 14px;
+  border-top-right-radius: 14px;
   cursor: pointer;
   overflow: hidden;
 }
@@ -27,7 +39,8 @@
 .showcaseCard :global(.card-title h4) {
   color: $color-primary;
   font-size: 18px;
-  font-family: "Open Sans", sans-serif;
+  font-weight: 800;
+  font-family: "Raleway", sans-serif;
 }
 
 .showcaseCard :global(.card-title) {
@@ -43,8 +56,10 @@
   font-size: 10px;
   font-family: "Poppins", sans-serif;
   font-weight: 600;
-  color: rgba(25, 34, 74, 1) !important;
-  background-color: #e6ebf0 !important;
+  // color: rgba(25, 34, 74, 1) !important;
+  // background-color: #e6ebf0 !important;
+  color: rgb(131, 131, 131) !important;
+  background-color: #ebebeb !important;
 }
 
 .showcaseCard p {
