--- a/src/assets/styles/ShowcaseCard.module.scss
+++ b/src/assets/styles/ShowcaseCard.module.scss
@@ -3,23 +3,23 @@
 .showcaseCard {
   position: relative;
   border: none !important;
-  border-radius: 14px;
+  border-radius: 8px;
   // box-shadow: 0 10px 8px -5px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 3px 4px 8px 0 rgba(0, 0, 0, 0.1);
   margin-bottom: 2rem;
-  // background-color: #f5f5f5 !important;
+  background-color: #fafafa !important;
   background-clip: padding-box;
   transition: ease;
   transition: box-shadow 0.3s ease-in-out;
 }
 
 .showcaseCard:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 3px 8px 16px 0 rgba(0, 0, 0, 0.1);
 }
 
 .showcaseCard .imgWrapper {
-  border-top-left-radius: 14px;
-  border-top-right-radius: 14px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
   cursor: pointer;
   overflow: hidden;
 }
@@ -48,20 +48,46 @@
 }
 
 .showcaseCard .badge {
-  padding: 0.4rem;
-  padding-left: 0.6rem;
-  padding-right: 0.6rem;
-  margin-right: 0.3rem;
+  padding: 0.37rem;
+  padding-left: 0.43rem;
+  padding-right: 0.43rem;
+  margin-right: 0.22rem;
   margin-bottom: 0.1rem;
   font-size: 10px;
   font-family: "Poppins", sans-serif;
   font-weight: 600;
-  // color: rgba(25, 34, 74, 1) !important;
-  // background-color: #e6ebf0 !important;
-  color: rgb(131, 131, 131) !important;
+  color: rgb(116, 116, 116) !important;
   background-color: #ebebeb !important;
 }
 
-.showcaseCard p {
+.showcaseCard .title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-bottom: 0;
+}
+
+.showcaseCard .showcaseBody {
+  height: 220px;
+  overflow: hidden;
+}
+
+.showcaseCard .showcaseBody .description {
+  display: -webkit-box;
   font-size: 15px;
+  overflow: hidden;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+}
+
+.showcaseCard .showcaseBody .tags {
+  margin-top: 8px;
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.tooltip {
+  max-width: 400px;
 }
