--- a/src/assets/styles/Style.scss
+++ b/src/assets/styles/Style.scss
@@ -245,3 +245,25 @@ h3.heading {
     width: 25%;
   }
 }
+
+.categoryFilter {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 10px;
+}
+.categoryFilter .btn-filter {
+  display: inline-block;
+  height: auto;
+  font-size: 14px;
+  color: #666;
+  padding: 7px 17px;
+  border: 1px solid #e2e2e2;
+  overflow: hidden;
+  margin: -1px -1px 0 0;
+  background-color: #fff;
+}
+.categoryFilter .btn-filter.active {
+  color: $color-primary;
+  font-weight: 600;
+  background-color: #f9f9f9;
+}
