feat(Projects): add icons for team and work

--- a/src/assets/styles/ShowcaseCard.module.scss
+++ b/src/assets/styles/ShowcaseCard.module.scss
@@ -67,6 +67,17 @@
   margin-bottom: 0;
 }
 
+.showcaseCard .date {
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  color: $color-primary;
+}
+
+.showcaseCard .icon {
+  color: $color-primary;
+  margin-left: 5px;
+}
+
 .showcaseCard .showcaseBody {
   height: 220px;
   overflow: hidden;
