--- a/src/assets/styles/ShowcaseCard.module.scss
+++ b/src/assets/styles/ShowcaseCard.module.scss
@@ -79,11 +79,15 @@
 }
 
 .showcaseCard .showcaseBody {
-  height: 220px;
+  height: 260px;
   overflow: hidden;
 }
 
-.showcaseCard .showcaseBody .description {
+.showcaseCard .showcaseBodyFull {
+  height: 100%;
+}
+
+.showcaseCard .description {
   display: -webkit-box;
   font-size: 15px;
   overflow: hidden;
@@ -91,12 +95,22 @@
   -webkit-box-orient: vertical;
 }
 
-.showcaseCard .showcaseBody .tags {
+.showcaseCard .descriptionFull {
+  font-size: 15px;
+}
+
+.showcaseCard .tags {
   margin-top: 8px;
   display: -webkit-box;
   overflow: hidden;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+}
+
+.showcaseCard .showMoreButton {
+  font-family: "Poppins", sans-serif;
+  font-size: 12px;
+  padding: 1px 9px;
 }
 
 .tooltip {
