--- a/src/assets/styles/ShowcaseCard.module.scss
+++ b/src/assets/styles/ShowcaseCard.module.scss
@@ -41,6 +41,7 @@
   font-size: 18px;
   font-weight: 800;
   font-family: "Raleway", sans-serif;
+  margin-bottom: 2px;
 }
 
 .showcaseCard :global(.card-title) {
@@ -65,6 +66,10 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   margin-bottom: 0;
+}
+
+.showcaseCard .subtitle {
+  margin-bottom: 8px;
 }
 
 .showcaseCard .date {
